@@ -1,3 +1,8 @@
+2014-06-05  Junichi Satoh  <junichi@rworks.jp>
+
+	* godmode/modules/manage_network_components_form_common.php: Removed
+	unnecesary variable.
+
 2014-06-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* godmode/setup/setup_general.php: Disable the "Enable
